--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ logo: /siteicon.png
 description: Fur t-shirt store
 author:
   name: Thanaa Alaa-Eldien
-  email: fur@example.com
+  email: omar2014.oa98@gmail.com
   twitter: fur # twitter username without the @ symbol
   phone: "+1 23456789"
 social:
